objects/RegionWiseGroupName__c.object
<CustomObject>
    <fields>
        <fullName>Finance__c</fullName>
        <description>This is for the contact address for the finance group related to the region</description>
        <label>Finance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Counsel__c</fullName>
        <label>Legal Counsel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Librarian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Librarian</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Regional_Role_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Director_DIST__c</fullName>
        <description>This is for the contact address for the Sales Director group related to the region</description>
        <label>Sales Director DIST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Director_OEM__c</fullName>
        <label>Sales Director OEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Executive__c</fullName>
        <description>This is for the contact address for the Sales Executive group related to the region</description>
        <label>Sales Executive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <description>This is for the contact address for the Sales Manager group related to the region</description>
        <label>Sales Manager</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_VP__c</fullName>
        <description>This is for the contact address for the Sales VP group related to the region</description>
        <label>Sales VP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Director__c</fullName>
        <description>This is for the contact address for the Tech Director group related to the region</description>
        <label>Technical Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>